fix viewer-html style (height, scroll, overflow)

--- a/src/solidbench.scss
+++ b/src/solidbench.scss
@@ -784,10 +784,15 @@ svg {
   }
 
   .resource-viewer {
+    @extend .vFlow;
+
+    .resource-url-input {
+      flex: none;
+    }
+
     .viewer-html {
       background-color: white;
       color: #101010;
-      overflow: auto;
     }
   }
 }
